Lab 06 "Find Evens or Odds" from the lesson for Functional Programming, a part of Java Advanced course.